tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_14.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (+ (+ ((1 + 1) + (1 + y))));
               p := ((- (+ (+ 1))) # (((z MOD y) DIV (0 MOD 1223)) * ((- 1223) DIV (1 MOD 1))));
               x := (((- (- x)) * ((0 - y) MOD (1223 DIV 1))) MOD (- ((x + y) DIV (+ 1))));
               r := ((- (- (+ z))) > ((- (y - 200)) * ((1223 MOD z) DIV (1223 * 2))));
               y := (- (((- x) * (z DIV 200)) - ((200 + 2) + (+ x))));
               q := ((((- 1) DIV (z MOD z)) MOD ((+ 1223) - (+ 1))) # (((- 1) * (- 200)) DIV ((200 * y) + (+ z))));
               z := (+ ((- (1223 - 2)) DIV ((0 DIV x) MOD (1 * 0))));
  (* error *)  r := ((+ ((r MOD 200) MOD (- 1))) < ((- (2 + 1)) DIV ((2 MOD 1223) * (0 DIV 1))));
               y := (((+ (+ y)) - ((200 * 1) + (+ 1))) DIV (- (- (200 + z))));
               x := (((+ (x - 0)) * (+ (200 DIV 200))) * (- ((z MOD z) - (y - 0))))
END Test18.